--- a/code-resources.html
+++ b/code-resources.html
@@ -73,7 +73,7 @@
             <figure>
                 <pre>
                     <code>
-                        <!---->Code Here
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora reprehenderit quod dolore totam a alias quibusdam, consectetur rerum saepe, doloribus asperiores quo nam aut est mollitia quia non similique quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel ipsam esse reprehenderit laborum? Corrupti, labore inventore laudantium officiis eveniet commodi porro ullam hic obcaecati asperiores suscipit, saepe quia eaque.
                     </code>
                 </pre>
             </figure>
