--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background-color: rgb(66, 66, 66);
             color: rgb(245, 245, 245);
             cursor: pointer;
-            padding: 18px;
+            padding: 14px;
             width: 100%;
             text-align: center;
             border: none;
@@ -19,7 +19,7 @@
             transition: 0.4s;
             width: 400px;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size:larger;
+            font-size:small;
         }
 
         .active, .accordion:hover {
@@ -46,7 +46,8 @@
         }
 
         a {
-            padding: 3%;
+            padding: 14px 3%;
+            /* margin-right: 3%; */
             color: white;
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size:medium
@@ -65,6 +66,7 @@
         <a href="matt.html">Matt</a>
         <a href="david.html">David</a>
     </nav>
+    <div></div>
     <nav>
         <a href="anna.html">Anna</a>
         <a href="kaitlyn.html">Kaitlyn</a>
@@ -76,8 +78,8 @@
         <div class="panel" style="color: limegreen; background-color: rgb(20, 20, 20);">
             <figure>
                 <pre>
-                    <code>
-                        <!---->Code Here
+                    <code style="white-space: break-spaces;">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut porro eius enim culpa, recusandae necessitatibus, pariatur, officiis libero corporis repellat quos voluptates voluptatem? Provident, natus neque. Minus harum itaque fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. A perferendis, itaque dolores cum quaerat exercitationem commodi rem accusamus magnam debitis reprehenderit in laboriosam earum voluptates dolorum recusandae voluptate. Sit, magnam.
                     </code>
                 </pre>
             </figure>
@@ -102,10 +104,5 @@
             });
         }
     </script>
-
-
 </body>
 </html>
-
-
-
