All pages proofed

--- a/abigayle.html
+++ b/abigayle.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+            #content {
+                margin: 30px;
+                max-width: 600px;
+            }
             body {
                 background-image:url("http://2.bp.blogspot.com/-ajQUv4d0CY0/UB3FWZMBxWI/AAAAAAAACMU/AYtA3eap1cw/s1600/CLIFF_DIVE_Wallpaper_bg7.jpg");
                 background-repeat:no-repeat;
@@ -171,7 +175,8 @@
                 });
             }
         </script>
-<h1>Cliffdiving </h1>
+<div id="content">
+<h1>Cliff Diving </h1>
 <h2>What is it?</h2>
 <p>Cliff diving is an act of diving into the water off of something high. People dive off of cliffs, bridges, and other things. </p>
 <img src="https://img.redbull.com/images/q_auto,f_auto/redbullcom/2020/1/14/dxkk4xfrxotmpn3sqsqx/maria-paula-quintero-cliff-diving-italy"width="300"/>
@@ -189,5 +194,8 @@
 <img src="https://cliffdiving.redbull.com/assets/athlete/lead_image/dt_rbcdphi_pare_1138_2.jpg?fit=outside|1030:442&crop=1030:442;*,*"width=300 alt="" />
 <h2>An Amazing Story            Gary Hunt
 <p>After a failed final dive in 2017 lost him his title, Gary Hunt returned to action in 2018 battling a twisting mental block which threatened to derail what had been a glorious career. His first leaps from the 27m platform were tentative and twist-free, and the Brit was powerless to prevent a couple of low finishes in the opening two events. Slowly but surely though, he began to master the mental block and rediscover the magic that had delivered him six previous World Series titles.
-<h1>conclusion</h1>
+<h1>Conclusion</h1>
 <p>In conclusion cliff diving is fun but it’s dangerous because people can get hurt by the impact when they hit the water, and if they aren’t careful of their surroundings like if there are rocks and sharks people can get hurt.</p>
+</div>
+</body>
+</html>
