--- a/anna.html
+++ b/anna.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css" media="all">
+    
+    #content {
+                margin: 30px;
+                max-width: 600px;
+    }
     body {
         background-image: url("https://s3.amazonaws.com/images.gearjunkie.com/uploads/2015/04/Honnold-climbing-2.jpg");
         background-size: 100%;
@@ -187,6 +192,7 @@
             });
         }
     </script>
+    <div id="content">
     <h1>FREE SOLO CLIMBING</h1>
     <h3>By: Anna</h3>
 
@@ -228,15 +234,7 @@
 
             <h2>Conclusion</h2>
             <p>In conclusion, free solo climbing is, what I would consider, an extreme sport. The mental ability it would take to do such a thing is beyond me. I mean, to realize that if you were to put your foot in a slightly wrong position, you might die, and still continue to climb, is bizarre. And the extreme physical ability you would have to have to do this is outrageous. Anyways, that’s free solo climbing in a nutshell. Well, I guess maybe not a nutshell, but maybe a walnut or something. I don’t know.</p>
-
-            <h2></h2>
-            <img src=" width=" px" height=alt="" />
-            <p>
-
-                <h2></h2>
-                <img src=" width=" px" height=alt="" />
-                <p>
-
-</body>
+        </div>
+        </body>
 
 </html>
