--- a/david.html
+++ b/david.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+            #content {
+                margin: 30px;
+                max-width: 600px;
+            }
             h2 {
                 color: white;
                 text-shadow: 3px 3px 2px gray;
@@ -71,6 +75,7 @@
 
         body {
             margin: 0px;
+            background-color: gray;
         }
         </style>
 </head>
@@ -198,7 +203,7 @@ this has lasted science 1911 started to be popular in 1980s and it was in a movi
             });
         }
     </script>
-
+<div id="content">
         <h2>JavaScript Alert</h2>
 
 <button onclick="myFunction()">Press me</button>
@@ -253,5 +258,6 @@ Climbing on high ledges and rails
 this has lasted science 1911 started to be popular in 1980s and it was in a movie called casino royale in 2006 and a campaign started in may 1st 2007
 </p>
        <H3>David</H3>
+    </div>
     </body>
 </html>
