--- a/wyatt.html
+++ b/wyatt.html
@@ -239,7 +239,7 @@ His girlfriend nods unconvincingly, looks away and blinks repeatedly, as if to h
         </script>
 
 <div id="content">
-        <h1>Free clmbing</h1>
+        <h1>Free Climbing</h1>
         <h1>by Wyatt</h1>
         
         <h2>The Sport</h2>
